# TrueGuardRepo-Public

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
TrueGuardLib/: CMakeLists.txt  TrueGuardLib.cpp  TrueGuardLib.h
TrueGuardLib/Sources/: InputEventListener.cpp  InputEventListener.h  NPCInventoryCases.cpp  TestUIImpl.h
TrueGuardLib/Sources/Constanta/: GlobalConstant.cpp  GlobalConstant.h
TrueGuardLib/Sources/DependencyInjection/: UIInterfaceInjection.cpp  UIInterfaceInjection.h
TrueGuardLib/Sources/Headers/: TGBaseMenu.h
TrueGuardLib/Sources/ImGUI/: ImGUIHooks.cpp  ImGUIHooks.h
TrueGuardLib/Sources/ImGUI/UIs/: DutyGuardUI.h
TrueGuardLib/Sources/InputEventListener/: InputEventListener.cpp  InputEventListener.h
TrueGuardLib/Sources/MinHookInt/: TGLUIHooksDx11.cpp  TGLUIHooksDx11.h
TrueGuardLib/Sources/NPCInventoryCases/: NPCInventoryCases.cpp  NPCInventoryCases.h
TrueGuardLib/Sources/ThreadEvents/: ThreadEvents.cpp  ThreadEvents.h
TrueGuardLib/Sources/UIHooks/: TGLUIHooksDx11.cpp  TGLUIHooksDx11.h
TrueGuardLib/Sources/UIs/: DutyGuardUI.cpp  DutyGuardUI.h
